mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_wrong_return.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Type mismatch: expected int, got string
--> test_scripts/error_cases/semantic_wrong_return.mux:3:10
   |
 3 |   return "str"
   |          ^^^^^
